--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 width: 100%;
 height:auto;
 margin: 0 auto;
-background-image:url("/img/fondo.jpg") ;
+background-image:url("img/fondo.jpg") ;
 overflow: hidden;
 }
 
