--- a/style.css
+++ b/style.css
@@ -1,233 +1,89 @@
-.contenedor {
-width: 100%;
-height:auto;
-margin: 0 auto;
-background-image:url("img/fondo.jpg") ;
-overflow: hidden;
+.perfil {
+	border-radius: 50%;
 }
-
-title {
-    border: 1px orangered;
-    padding: 5px 15px 5px 15px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    display: block;
-    font-size: 55px;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    text-decoration-color: blueviolet;
-    font-family: 'Libre Baskerville', cursive;
-    color: black;
-    text-align: center;
+.vanilla {
+	width:80% ;
+	height:80%;
+	float: left;
+	padding: 10px;
 
 }
-h1 {
-    border: 1px orangered;
-    padding: 2px 2px 2px 2px;
-    display: block;
-    font-size: 30px;
-    margin-top: 0px;
-    margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    text-decoration-color: blueviolet;
-    font-family:'Libre Baskerville', cursive;
-    text-align: center;
-}
 
-div {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    
-}
-h2 {
-    padding: 5px 5px 5px 5px;
-    display: block;
-    font-size: 22px;
-    margin-top: 0px;
-    margin-block-start: 0.45em;
-    margin-block-end: 0.45em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    text-decoration-color: blueviolet;
-    font-family: 'Libre Baskerville', cursive;
-    color: black;
-    text-align: center;
-    
-}
-h3, h4 {
-    display: block;
-    margin-block-start: 0.45em;
-    margin-block-end: 0.45em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    text-decoration-color: blueviolet;
-    font-family:'Libre Baskerville', cursive;
-    font-size: 27px;
-    color: black;
-    text-align: center;
-}
-h5, h6 {
-    display: block;
-    margin-block-start: 0.45em;
-    margin-block-end: 0.45em;
-    margin-inline-start: 3px;
-    margin-inline-end: 3px;
-    font-weight: bold;
-    text-decoration-color: blueviolet;
-    font-family: 'Libre Baskerville', cursive;
-    font-size: 20px;
-    color: black;
-}
 
-selector-for-some-widget {
-    box-sizing: content-box;
-}  
 
-section {
+body {background-color:rgb(245,245,220) ;
+	
 
-    border: 150px orangered;
-    padding: 10px 10px 10px 10px;
-    margin-top: 2px;
-    margin-bottom: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 18px;
-    background-color: transparent;
-    height: auto   ;
 }
-    
-ul {
-    border: 150px violet;
-    padding: 10px 10px 10px 10px;
-    font-family: 'Libre Baskerville', cursive;
-    font-size: 18px;
-    background-color: transparent;
-    box-sizing: border-box;
-    max-width: 100%;
- 
-}
-li{
-    text-align: left;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left:   20px;
-    margin-right: 10px;
-    font-family: 'Libre Baskerville', cursive;
-}
-nav {
-    border: 100px lightseagreen;
-    padding: 10px 10px 10px 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
-    font-family: 'Libre Baskerville', cursive;
-    font-size: 15px;
-    background-color: transparent;   
-}
+.sm{
+	width: auto	;
+	height: auto	;
+	align: center;
+	font-family:'Libre Baskerville', cursive;
+	display: inline-block;
+	position: absolute;
 
-p {
-    font-family:'Libre Baskerville', cursive;
-    
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-size: 18px;
 }
+.intp{
+	display: block;
 
-h5{
-    font-size: 22px;
 }
+.logros{
+	display: block;
+}
+.bt1{
+  border: none;
+  padding: ;
+  background: transparent;
+  color: black;
+  cursor: pointer;
+  text-shadow: 0px 0px 2px black;
+            font-size: 17px;
+}
+.bt2{
+  border: none;
+  padding: ;
+  background: transparent;
+  color: black;
+  cursor: pointer;
+  text-shadow: 0px 0px 2px black;
+            font-size: 17px;
+}
+.bt3{
+  border: none;
+  padding: ;
+  background: transparent;
+  color: black;
+  cursor: pointer;
+  text-shadow: 0px 0px 2px black;
+            font-size: 17px;
+}
+ul{
+            display: flex;
+            list-style: none;
+            justify-content: space-evenly;
+            padding: 20px;
+            
+            background: linear-gradient(
+                90deg,
+                rgb(212, 175, 55),
+                rgba(212, 175, 55, 1)
+            );
+        }
+        ul li a{
+            color:var(--colorBlanco);
+            text-decoration: none;
+            text-shadow: 0px 0px 2px black;
+            font-size: 17px;
+        }
+        ul li a:hover{
+            border-bottom: 1px solid var(--colorBlanco);
+            padding-bottom: 5px;}
 
-h6{
-    font-size: 18px;
-}
 
-main {
-    column-count: 2;
-    column-gap: 1em;
-    column-rule: 1px;
-    column-width: 40%;
-    box-sizing: border-box;
-}
-
-aside {
-    column-count: 1;
-    column-gap: 1em;
-    column-rule: 1px;
-    column-width: 60%;
-    box-sizing: border-box;
-}
-
-article{
-    border: 150px;
-    padding: 10px 10px 10px 10px;
-    margin-top: 2px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: transparent;
-    text-align:justify-all;
-}
-.main img {
-    width: 50%;
-    column-span: none;
-    image-rendering: optimizeQuality;
-    box-sizing: border-box; 
-    height: auto;   
-}
-
-@media screen and (max-width: 800px){
-    .main{
-        width: 100%;
-    }
-    .aside {
-        width: 100%;
-    }
-}
-@media screen (width){
-    if .contenedor (max-width >= 400px) {
-        column-count: 1;
-    }alse {
-        column-count: 2;
-       }
-    
-    }
-}
-
-/*@media screen and (max-width: 400px){
-    .contenedor{
-        column-count: 1;
-        width: 100%;
-
-    }
-    
-}
-section {
-    border: 150px orangered;
-    width: 420px;
-    padding: 20px 30px 20px 30px;
-    margin-top: 20px;
-    margin-bottom: 25px;
-    margin-left: 775px;
-    margin-right: 30px;
-    background-color: orange;
-
-    https://www.w3schools.com/bootstrap5/tryit.asp?filename=trybs_default&stacked=h
-
-    https://www.youtube.com/watch?v=HtWIrGqbEwI
-}
+       footer {
+       	position:fixed;
+        bottom: 0;
+  		width: 100%;
+  		height:100px;
+  }
