--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .perfil {
 	border-radius: 50%;
+  left: 25px;
 }
 .vanilla {
 	width:80% ;
@@ -59,25 +60,26 @@ body {background-color:rgb(245,245,220) ;
             font-size: 17px;
 }
 ul{
+            
             display: flex;
             list-style: none;
             justify-content: space-evenly;
-            padding: 20px;
+            padding: 20px ;
             
             background: linear-gradient(
                 90deg,
                 rgb(212, 175, 55),
-                rgba(239, 184, 16, 1)
+                rgba(212, 175, 55, 1)
             );
         }
         ul li a{
-            color:var(--colorBlanco);
+            color:white;
             text-decoration: none;
             text-shadow: 0px 0px 2px black;
             font-size: 17px;
         }
         ul li a:hover{
-            border-bottom: 1px solid var(--colorBlanco);
+            border-bottom: 1px solid ;
             padding-bottom: 5px;}
 
 
@@ -87,3 +89,30 @@ ul{
   		width: 100%;
   		height:100px;
   }
+.tooltip {
+  
+  display: inline-block;
+ 
+  float: left;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: rgb(212, 175, 55);
+  color: black;
+  text-shadow: 0px 0px 2px black;
+  text-align: left;
+  border-radius: 6px;
+  padding: 6px 15px ;
+
+  /* Position the tooltip */
+  position: absolute;
+  top: 300px;
+  left:65px;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
